# lg_ros_nodes

./: .coveralls.yml  .dockerignore  .eslintignore  .eslintrc  .gitignore  .travis.yml  AUTHORS.md  Dockerfile  Dockerfile.merged  Jenkinsfile  MANIFEST.in  README.md  cppcheck_suppressions.txt  design_nodes.txt  newf.txt  nosy.cfg  pack-debs  requirements.txt  ros_entrypoint.sh  setup.cfg  sync_to_docker.sh
aggressive_proxy/: CMakeLists.txt  package.xml  setup.py
aggressive_proxy/scripts/: proxy.py  test_delay_server.py
aggressive_proxy/test/: test_proxy_handler.py
interactivespaces_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
interactivespaces_msgs/example_messages/: README.md  browser_center.json  browser_center_browser_right.json  center_browser_extensions.json  center_browser_preload.json  center_browsers_no_preload.json  center_browsers_no_preload_alt.json  center_browsers_preload.json  center_browsers_preload_alt.json  center_two_browsers.json  kml_browser.json  mirroring.json  page_monitor_google.json  page_monitor_yandex.json  three_browsers_full.json  wall_kiosk.json
interactivespaces_msgs/msg/: GenericMessage.msg
interactivespaces_msgs/scripts/: send_director.py
keyhole_proxy/: CMakeLists.txt  README.md  package.xml
keyhole_proxy/scripts/: proxy.py
lg_activity/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
lg_activity/msg/: ActivityState.msg
lg_activity/scripts/: dcv_activity_pub  dcv_activity_pub.py  earth_keystroke_sender  earth_keystroke_sender.py  tracker  tracker.py  write_scene_timestamps  write_scene_timestamps.py
lg_activity/srv/: ActivityState.srv  ActivityStates.srv
lg_adhoc_browser/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
lg_adhoc_browser/debian/: changelog  control  rules
lg_adhoc_browser/launch/: dev.launch
lg_adhoc_browser/msg/: AdhocBrowser.msg  AdhocBrowsers.msg
lg_adhoc_browser/scripts/: client.py
lg_adhoc_browser/test/: test_client.py
lg_attract_loop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
lg_attract_loop/scripts/: attract_loop  attract_loop.py
lg_builder/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py  sys.deps
lg_builder/scripts/: lg-ros-build  lg-ros-build.py
lg_builder/templates/: rules
lg_cms_director/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
lg_cms_director/launch/: director.launch
lg_cms_director/scripts/: director  director.py
lg_common/: CHANGELOG.rst  CMakeLists.txt  MANIFEST  README.md  lg_active_overlay  lg_active_overlay.py  lg_active_scene  lg_active_scene.py  package.xml  setup.py
lg_common/debian/: changelog  control  rules
lg_common/examples/: browser.py  webapp_flask.py  webapp_tornado_rosbridge.py
lg_common/launch/: adhoc_pool_test.launch  browser.launch  dev.launch  earth.launch  lg_activity_mod.launch  pv.launch  sv.launch
lg_common/msg/: AdhocBrowser.msg  AdhocBrowsers.msg  ApplicationState.msg  BrowserCmdArg.msg  BrowserExtension.msg  BrowserURL.msg  Ready.msg  WindowGeometry.msg
lg_common/scripts/: actual_button.py  adhoc_browser  adhoc_browser.py  browser_url.py  button  button.py  command_handler_node  command_handler_node.py  dev_webserver  dev_webserver.py  last_uscs_message  last_uscs_message.py  lg_active_scene  lg_overlay_listener  multi_pan.py  proc_watcher.py  readiness  readiness.py  state_setter.py  static_browser  static_browser.py  stt_bridge  stt_bridge.py  stt_bridge.toml  stt_bridge~lg_ollama  topicbridge.py  touchscreen  touchscreen.py  uscs_service  uscs_service.py
lg_common/srv/: BrowswerURL.srv  DirectorPoolQuery.srv  InitialUSCS.srv
lg_common/test/: test_all.test
lg_common/webapps/: button.html
lg_earth/: CHANGELOG.rst  CMakeLists.txt  README.md  add_kml_snippet.js  package.xml  setup.py
lg_earth/bash_scripts/: 3d_blank  3d_layer_off  3d_layer_on_1  3d_layer_on_2  repub.py  simple_toggle.bash  toggle_layer.bash
lg_earth/debian/: changelog  control  rules
lg_earth/python_scripts/: toggle_layer.py
lg_earth/scripts/: add_kml  add_kml.py  client  client.py  kmlsync  kmlsync.py  kmlsync_state  kmlsync_state.py  planet_changer  planet_changer.py  query  query.py  simple_service  simple_service.py  toggle_3d_service.py  toggle_layer.bash  toggle_layer_service.py  toggles_rosnode  toggles_rosnode.py  touchscreen_relay.py  viewsync_relay  viewsync_relay.py  viewsync_sniffer  viewsync_sniffer.py
lg_earth/srv/: KmlState.srv  LastSceneModified.srv  SceneModifiedTime.srv  Toggle3dSet.srv  Toggle3dState.srv  ViewsyncState.srv
lg_earth/test/: test_all.test  test_query_queue.py  test_query_writer.py
lg_earth/webapps/: add_kml_listener.html  test_add_kml.html
lg_json_config/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
lg_json_config/scripts/: serve_config.py
lg_json_config/srv/: JSONConfigMore.srv
lg_keyboard/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
lg_keyboard/config/: onboard-default.dconf
lg_keyboard/scripts/: onboard  onboard.py  onboard_router  onboard_router.py
lg_lock/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
lg_lock/launch/: launch.xml
lg_lock/scripts/: service.py
lg_lock/srv/: UnLock.srv
lg_media/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py  sys.deps
lg_media/launch/: dev.launch
lg_media/msg/: ActivityConfig.msg  AdhocMedia.msg  AdhocMedias.msg  ImageView.msg
lg_media/scripts/: browser_launcher  browser_launcher.py  browser_player  browser_player.py  client.py  gstreamer  gstreamer.py  image_checker.py  image_viewer.py  media_app_manager.py  media_launcher.py  mplayer.py  tiv.py
lg_media/src/: build_gst_video_sync.sh  gst_video_sync.cpp
lg_media/srv/: MediaAppsInfo.srv
lg_media/test/: test_lg_media_basic.py  test_lg_media_basic.test
lg_mirror/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py  sys.deps
lg_mirror/launch/: mirror_dev.launch  webcam.launch
lg_mirror/msg/: EvdevEvents.msg
lg_msg_defs/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+885 files in other folders)
