<?xml version="1.0"?>
<package>
  <name>keyhole_proxy</name>
  <version>0.0.0</version>
  <description>The keyhole_proxy package</description>

  <maintainer email="galadmin@todo.todo">galadmin</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
