<?xml version="1.0"?>
<package>
  <name>lg_attract_loop</name>
  <version>3.9.20</version>
  <description>ROS software for playing Liquid Galaxy Attract Loop</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>

  <author email="wojtek@endpoint.com">Wojciech Ziniewicz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>lg_common</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>interactivespaces_msgs</run_depend>
  <test_depend>rostest</test_depend>
</package>
