<?xml version="1.0"?>
<package>
  <name>lg_builder</name>
  <version>1.1.23</version>
  <description>Liquid Galaxy debian package build scripts</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>

  <author email="matt@endpoint.com">Matt Vollrath</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python-debian</run_depend>
  <run_depend>python-catkin-pkg</run_depend>
  <run_depend>python-rospkg</run_depend>
</package>
