<?xml version="1.0"?>
<package>
  <name>lg_builder</name>
  <version>3.8.0</version>
  <description>Liquid Galaxy debian package build scripts</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>

  <author email="matt@endpoint.com">Matt Vollrath</author>

  <buildtool_depend>catkin</buildtool_depend>
		  <!--<run_depend>python3-debian</run_depend> does not exist in rosdep currently-->
  <run_depend>python3-catkin-pkg</run_depend>
  <run_depend>python3-rospkg</run_depend>
</package>
