<?xml version="1.0"?>
<package>
  <name>lg_common</name>
  <version>3.5.3</version>
  <description>Common software for Liquid Galaxy ROS nodes.</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>

  <author email="matt@endpoint.com">Matt Vollrath</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>appctl</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>interactivespaces_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbridge_suite</run_depend>
  <run_depend>lg_msg_defs</run_depend>
  <run_depend>socat</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python-pytest</test_depend>
</package>
