<?xml version="1.0"?>
<package>
  <name>lg_earth</name>
  <version>3.9.25</version>
  <description>ROS software for running and interfacing with the Google Earth desktop client.</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>
  <author email="wojtek@endpoint.com">Wojciech Ziniewicz</author>

  <license>TODO</license>

  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>

  <author email="matt@endpoint.com">Matt Vollrath</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>lg_msg_defs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>appctl</run_depend>
  <run_depend>interactivespaces_msgs</run_depend>
  <run_depend>lg_common</run_depend>
  <run_depend>lg_msg_defs</run_depend>
	  <!--<run_depend>python3-pyinotify</run_depend> -->
  <test_depend>rostest</test_depend>
  <test_depend>python3-requests</test_depend>
</package>
