<?xml version="1.0"?>
<package>
  <name>lg_json_config</name>
  <version>2.0.3</version>
  <description>JSON configuration node</description>

  <maintainer email="lg-rad@endpoint.com">R&amp;D @ End Point</maintainer>
  <url type="website">https://liquidgalaxy.endpoint.com/</url>

  <license>TODO</license>

  <author email="matt@endpoint.com">Matt Vollrath</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
</package>
