<?xml version="1.0"?>
<package>
  <name>lg_keyboard</name>
  <version>1.18.18</version>
  <description>ROS node handling onboard keyboard</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>

  <author email="zdenek@endpoint.com">Zdenek Maxa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>lg_common</build_depend>
  <build_depend>appctl</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>lg_common</run_depend>
  <run_depend>appctl</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python-pytest</test_depend>

</package>
