<?xml version="1.0"?>
<package>
  <name>lg_lock</name>
  <version>1.20.3</version>
  <description>Service to lock LG</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>

  <license>TODO</license>

  <url type="website">https://bits.endpoint.com/dmitry/lg_lock</url>

  <author email="dmitry@endpoint.com">Dmitry Kiselev</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>lg_common</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>lg_common</run_depend>
</package>
