<?xml version="1.0"?>
<package>
  <name>lg_media</name>
  <version>2.0.3</version>
  <description>Ad hoc media services</description>

  <maintainer email="lg@endpoint.com">End Point Liquid Galaxy Team</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/EndPointCorp/lg_ros_nodes</url>

  <author email="zdenek@endpoint.com">Zdenek Maxa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>lg_common</build_depend>
  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <build_depend>libqt5-core</build_depend>
  <!--<build_depend>libqt5-gstreamer-dev</build_depend>-->
  <build_depend>libqt5-gui</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>lg_common</run_depend>
  <run_depend>mplayer</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>gstreamer1.0-plugins-base</run_depend>
  <run_depend>gstreamer1.0-x</run_depend>
  <run_depend>gstreamer1.0-libav</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python-pytest</test_depend>
</package>
